<resources>

    <string name="app_name">Star Auto Assist</string>
    <string name="merchant_key">ievKqscLGr</string>
    <string name="merchant_code">M03214</string>

    <string name="facebook_app_id">203876700441500</string>
    <string name="fb_login_protocol_scheme">fb203876700441500</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="ok">OK</string>
    <string name="gps_settings">GPS Settings</string>
    <string name="gps_notenabled">GPS is not enabled. Do you want to go to settings menu?</string>
    <string name="need_permission_to_access">Need permission to access this page</string>
    <string name="location_permission_access">Now you have a permission to access location</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="slide_1_title">Towing</string>
    <string name="slide_1_desc">Our towing practices are designed around three principles. Customer safety, vehicle safety, and pedestrian safety.</string>
    <string name="network_error">Network Error!</string>
    <string name="network_error_des">Please check your internet connection</string>
    <string name="go_settings">Go to Settings</string>
    <string name="err_msg_email">Enter valid Email Address</string>
    <string name="err_msg_password">Enter your Password</string>
    <string name="star_auto_assist">Star Auto Assist</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="send_request">Send Request</string>
    <string name="drop_location">Drop Location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="set_pickup_location">Set Pickup Location</string>
    <string name="set_drop_location">Set Drop Location</string>
    <string name="set">SET</string>
    <string name="slide_title2">Fuel Service</string>
    <string name="slide_intro_des2">If you’ve ever been stuck on the road when a car ran out of fuel, you know how hard it can be to get help late at night. Walking along a dark road in hopes of finding a fuel station can be dangerous, and waiting on hold with the customer service from your roadside assistance club can be frustrating. A new roadside service app, Star Auto Assist sends help faster whether your car ran out of gas or broke down.</string>
    <string name="intro_slide_title3">Jumpstart Service</string>
    <string name="intro_des_slide3">Your car’s battery can fail for many reasons, including extended lack of use, interior lights left on, or cold weather. No matter the cause, having a dead car battery can derail your plans and leave you stranded. Get quick help with a dead car battery from Star Auto Assist, a better alternative for roadside assistance now available across the Malaysia</string>
    <string name="intro_title4">Flat Tyre</string>
    <string name="intro_des_slide4">When your tire goes flat or blows out on the side of the highway, you are stranded until help arrives. If you have the right tools and enough strength, you may be able to pry off the busted tire, put on your doughnut, and drive to a tire repair shop. If you can’t do this, you’re stuck until help arrives. Even then, you may be paying unreasonable fees for roadside service.</string>
    <string name="fuel_service">Fuel Service</string>
    <string name="camera_not_found">Camera not found</string>
    <string name="storage_permission_access">Now you have a permission to access storage</string>
    <string name="camera_permission_access">Now you have a permission to access camera</string>
    <string name="storage_camera_permisssion">Now you have a permission to access camera and storage</string>
    <string name="please_take_snap">Please take a snap</string>
    <string name="your_device_doesnt_flash">Your device doesn\'t have flash</string>
    <string name="notification_text">Tracking, tap to cancel</string>
    <string name="title_activity_maps">Map</string>
    <string name="route_distance">Distance</string>
    <string name="route_distance_value">40.2 Km</string>
    <string name="route_duration">Duration</string>
    <string name="route_duration_value">48 mins</string>
    <string name="server_error">Server error. Something when wrong with the server</string>
    <string name="please_fill_all">Please fill all the field</string>
    <string name="reallySignOut">Do you really want to SignOut\u003F</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="time_ago_prefix"></string>
    <string name="time_ago_suffix">ago</string>
    <string name="time_ago_seconds">Just now</string>
    <string name="time_ago_minute">1 minute</string>
    <string name="time_ago_minutes">%d minutes</string>
    <string name="time_ago_hour">1 hour</string>
    <string name="time_ago_hours">%d hours</string>
    <string name="time_ago_day">1 day</string>
    <string name="time_ago_days">%d days</string>
    <string name="time_ago_month">1 month</string>
    <string name="time_ago_months">%d months</string>
    <string name="time_ago_year">1 year</string>
    <string name="time_ago_years">%d years</string>
    <string name="track_now">Track Now</string>
    <string name="default_notification_channel_id">Services</string>
    <string name="signup_with_google">Login with google</string>
    <string name="signup_with_facebook">Login with facebook</string>
    <string name="registration">REGISTRATION</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="mobile_number">Mobile number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="get_otp">Get OTP</string>
    <string name="confirm">Confirm</string>
    <string name="forgotpassphrase">Don\'t worry… Please enter your mobile no below</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="phone">Phone</string>
    <string name="pin">Pin</string>
    <string name="towing">Towing</string>
    <string name="flat_tyre">Flat Tyre</string>
    <string name="jump_start">Jump Start</string>
    <string name="out_of_fuel">Out of Fuel</string>
    <string name="brand">Brand</string>
    <string name="select_model">Select Model</string>
    <string name="send_response">Send Response</string>
    <string name="description">* If any extra charges comes will need to pay at the end of service done. Like toll,spares,night service and etc</string>
    <string name="flattyredes">We change your tyre with the spare or have the tyre repaired, in case you have a flat tyre.<br /></string>
    <string name="tyre_ser_des"><![CDATA[Thank you for using Star Auto Assist.<br/><p>Our service charge starts from RM60. Additional charges may apply for other services (e.g tyre replacement) ONLY IF agreed with the service provider.</p>]]></string>
    <string name="aboutus"><![CDATA[Welcome to Star Auto Assist.<br/> <br/>We understand how stressful it can be when your car broke down. That\'s why our roadside Ranger will work to get you quickly back on the road and driving again with transparent prices. No more Rip-Offs.<br/>Please note that our Customer Service Team is always ready to provide you with timely and efficient professional assistance at all times 24/7. </p>]]></string>
    <string name="address"><![CDATA[ADDRESS: <br/>A-09-15, PINNACLE PETALING JAYA,<br/>
                           JALAN 51A/223,<br/>
                           PJS 52, 46100 PETALING JAYA<br/>
                           SELANGOR.]]></string>

    <string name="fuel_des"><![CDATA[Thank you for using Star Auto Assist.<br/><p>Our service charge starts from RM60. Additional charges will be incurred according to the type of fuel you choose.</p>]]></string>
    <string name="fuel_des1">Please select the “Fuel Type” below and click “SEND REQUEST”</string>
    <string name="invite_content">Get the best service on time where you need exactly and track them lively on our app.</string>
    <string name="jumpstartdes"><![CDATA[Thank you for using Star Auto Assist.<br/><p>Our service charge starts from RM60. Additional charges may apply for other services (e.g battery replacement) ONLY IF agreed with the service provider.</p>]]></string>
    <string name="jumpstartdes1">Please click “SEND REQUEST” below</string>
    <string name="based_fare">Based Fare</string>
<!--
    <string name="terms"><![CDATA[I Agree <a href="https://starautoassist.com/private.php?"> Terms &amp; Conditions</a>.]]></string>
-->
    <string name="pay_send"><![CDATA[PAY & SEND REQUEST]]></string>
    <string name="termsnconditions">I agree to the Terms &amp; Conditions</string>
    <string name="privacy"><u>Privacy Policy</u></string>
    <string name="cancelpolicy"><u>Cancellation Refund</u></string>
    <string name="terms"><u>Terms &amp; Conditions</u></string>
</resources>
