<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    android:background="@drawable/splash"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="15dp">
    <ScrollView
        android:id="@+id/loginscroll"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
<LinearLayout
    android:layout_marginTop="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:id="@+id/logoimage">
        <ImageView
            android:src="@drawable/logo"
            android:layout_gravity="center"
            android:layout_width="@dimen/imgmar"
            android:layout_height="@dimen/imgmar"
            android:contentDescription="@string/star_auto_assist" />
</LinearLayout>
    <LinearLayout

        android:orientation="vertical"
        android:layout_below="@+id/logoimage"
        android:id="@+id/loginfieldlayout"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/email_layout"
            android:layout_marginTop="25dp"
            android:orientation="horizontal"
            android:weightSum="2"
            android:background="@drawable/round_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_phone_android_orange_700_36dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_weight="1.7"/>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:background="@drawable/border_edittext"
                android:id="@+id/log_et_mobileno"
                android:paddingLeft="5dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:hint="@string/phone"
                android:inputType="phone"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="?colorAccent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"         />
        </LinearLayout>


        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/pass_layout"
            android:layout_marginTop="25dp"
            android:weightSum="2"
            android:background="@drawable/round_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_vpn_key_orange_a700_36dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                android:layout_weight="1.7" />

            <com.rengwuxian.materialedittext.MaterialEditText
                app:met_floatingLabel="highlight"
                app:met_primaryColor="?colorAccent"
                android:background="@drawable/border_edittext"
                android:id="@+id/log_et_pass"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginbtn_lay"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/loginfieldlayout">
        <Button
            android:id="@+id/log_btn_login"
            android:textSize="16sp"
            android:text="LOGIN"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/round_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>
            <LinearLayout
                android:id="@+id/forgot_layout"
                android:layout_below="@+id/loginbtn_lay"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_weight="1"
                    android:id="@+id/log_tv_forgot"
                    android:textSize="15sp"
                    android:gravity="left"
                    android:textColor="@color/white"
                    android:text="Forgot Password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


                <TextView
                    android:layout_weight="1"
                    android:id="@+id/log_tv_create"
                    android:textSize="15sp"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:textColor="@color/white"
                    android:text="Create Account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>
            <RelativeLayout
                android:visibility="visible"
                android:id="@+id/or_layout"
                android:layout_marginTop="5dp"
                android:layout_below="@+id/forgot_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:text="--or--"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </RelativeLayout>

            <LinearLayout
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:weightSum="2"
                android:layout_below="@+id/or_layout"
                android:id="@+id/google_facebook_layout"
                android:layout_width="match_parent"
                android:visibility="visible"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/fbLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/fb_bg"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/fbBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:src="@drawable/fb_icon" />

                    <TextView
                        android:id="@+id/fbTxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center"
                        android:paddingEnd="40dp"
                        android:text="@string/signup_with_facebook"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:paddingRight="40dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gpLay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/gp_bg"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/gpBtn"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:src="@drawable/g_icon" />

                    <TextView
                        android:id="@+id/gpTxt"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingEnd="40dp"
                        android:text="@string/signup_with_google"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:paddingRight="40dp"
                        tools:ignore="RtlSymmetry" />
                </LinearLayout>


            </LinearLayout>



        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/otplayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/forgotimg"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/forget" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:text="@string/forgot_your_password"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textSize="13sp"
            android:text="@string/forgotpassphrase"/>
        <EditText
            android:id="@+id/et_otp_phone"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="@string/mobile_number"
            android:paddingLeft="15dp"
            android:background="@drawable/border_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:inputType="phone" />
        <EditText
            android:id="@+id/confirmotp_code"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Enter OTP"
            android:paddingLeft="15dp"
            android:background="@drawable/border_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:inputType="phone" />

        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btn_otp"
            android:text="Get OTP"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:background="@drawable/round_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/btn_confirm"
            android:text="Confirm"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:visibility="gone"
            android:layout_marginRight="20dp"
            android:background="@drawable/round_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/resetpasswordlayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/forgetimg"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/pass" />
        <EditText
            android:id="@+id/newpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="New Password"
            android:paddingLeft="15dp"
            android:background="@drawable/border_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:visibility="visible"
            android:layout_gravity="center"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:ems="10"
            android:hint="Confirm Password"
            android:paddingLeft="15dp"
            android:background="@drawable/border_edittext"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:visibility="visible"
            android:inputType="textPassword" />

        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/update_password"
            android:text="Update Password"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="15dp"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:visibility="visible"
            android:background="@drawable/round_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</RelativeLayout>